2008-07-20  Roland Mas  <lolando@debian.org>

	* common/reporting/ReportTrackerAct.class.php: Fixed off-by-one
	bug in reports.

	* www/tracker/reporting/index.php: Added explicit type conversion
	in SQL query.

2008-05-21  Roland Mas  <lolando@debian.org>

	* deb-specific/sqlparser.pm: Added support for /* comments */ in
	SQL files (except that contrary to C, they can be nested).

2008-05-14  Roland Mas  <lolando@debian.org>

	* deb-specific/ssh_dump_update.pl: Fixed syntax error.

	* utils/include.pl (write_array_file): Fixed bad logic that
	rendered the function inoperant.

2008-05-13  Roland Mas  <lolando@debian.org>

	* utils/include.pl: Use temporary files and renaming to avoid
	insecure file handling (CVE-2008-0167).
	* deb-specific/ssh_dump_update.pl: Handle potential failure in
	write_array_file.

2008-05-05  Roland Mas  <lolando@debian.org>

	* www/soap/nusoap.php: Renamed soapclient class to gfsoapclient,
	for compatibility with PHP5.

2008-04-24  Roland Mas  <lolando@debian.org>

	* etc/local.d/10database.header: Read database authentication info
	from HTTP headers in addition to environment variables.
	* plugins/mediawiki/mediawiki-skin/GForge.php: Ditto.
	* etc/httpd.d/httpd.secrets: Provide this info using the
	RequestHeader directive.
	* utils/install-apache.sh: Load appropriate module.

2008-03-15  Christian Bayle <bayle@debian.org>
	
	* Improve a bit Mantis and Webcalendar Plugins, so gforge don't crash
	* Added and use util_make_url_u, util_make_url_g ,
	util_make_link_u and util_make_link_g for /projects and /users link
	forcetype shouln'd be necessary to run gforge now
	* Rewrite jscook stuffs for docman, should be more readeable
	added expand/collapse buttons
	* Upgraded jscook (tree and menu) with last available version from
	http://jscook.yuanheng.org/JSCookTree/
	* Patched jscook so it takes in account myThemeXPBase on the model of 
	JSCookMenu

2008-03-11  Alain Peyrat <aljeux@free.fr>
