@@ -1,6 +1,8 @@
 $sys_database_type='pgsql';
 
-$headers = apache_request_headers() ;
+if (function_exists ('apache_request_headers')) {
+	$headers = apache_request_headers() ;
+}
 
 // Databases, html/php/other paths, passwords
 if (getenv ('SERVER_SOFTWARE')) { // We're on the web
